src/objects/Config_cs_casePicklistValues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchical custom setting that provides access to some case field picklist values based on user profiles. 
The label of each custom setting field is the same as the label of the case field it represents.</description>
    <fields>
        <fullName>Motivo_Rifiuto_cs__c</fullName>
        <label>Motivo Rifiuto</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagamento_cs__c</fullName>
        <label>Pagamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Causale_cs__c</fullName>
        <label>Causale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Genere_Problema_cs__c</fullName>
        <label>Genere Problema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Giacenza_cs__c</fullName>
        <label>Giacenza</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Note_Gestione_cs__c</fullName>
        <label>Note Gestione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Richiedente_cs__c</fullName>
        <label>Richiedente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Stato_Gestione_RMA_cs__c</fullName>
        <label>Stato Gestione RMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Stato_Richiesta_RMA_Old_cs__c</fullName>
        <label>Stato Richiesta RMA Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Stato_Richiesta_RMA_cs__c</fullName>
        <label>Stato Richiesta RMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Richiedente_cs__c</fullName>
        <label>Richiedente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatoHelper_cs__c</fullName>
        <label>StatoHelper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_Contestazione_cs__c</fullName>
        <label>Stato Contestazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_Tracking_cs__c</fullName>
        <label>Stato Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPicklist_cs__c</fullName>
        <description>Custom setting field representing the picklist values available to the case TestPicklist__c field.</description>
        <label>TestPicklist</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Pratica_cs__c</fullName>
        <label>Tipo Pratica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia_cs__c</fullName>
        <label>Tipologia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Picklist Values</label>
</CustomObject>